--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "messenger-chatgpt-bot",
   "version": "1.0.0",
-  "description": "Messenger bot connected to ChatGPT",
+  "description": "Messenger bot connected with ChatGPT using OpenAI API",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "dotenv": "^16.3.1",
+    "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "openai": "^4.0.0"
   }
