--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
-  "name": "messenger-chatgpt-bot",
+  "name": "replit-test",
   "version": "1.0.0",
-  "description": "Messenger bot connected with ChatGPT using OpenAI API",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.6.7",
-    "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "openai": "^4.0.0"
+    "express": "^4.19.2"
   }
 }
