--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "replit-test",
+  "name": "messenger-chatgpt-bot",
   "version": "1.0.0",
+  "description": "Facebook Messenger bot powered by ChatGPT",
   "main": "server.js",
   "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "axios": "^1.6.7",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "openai": "^4.0.0"
   }
 }
